### Implements #6 (HEAD -> proposal001)
>Thu, 30 May 2024 09:53:06 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### build(Docker): Added a Dockerfile-dev for testing purpose, which copies local files instead of cloning the remote repository.
>Thu, 23 May 2024 09:12:10 +0200

>Author: emuller (emuller@geomatys.com)

>Commiter: emuller (emuller@geomatys.com)




### fix(test): Added a method to test GML generation and changed 'make tests' to 'make test' as 'test' singular is more commonly used.
>Thu, 16 May 2024 11:00:12 +0200

>Author: Emile-Muller (emile.muller.contact@gmail.com)

>Commiter: Emile-Muller (emile.muller.contact@gmail.com)




### doc(Makefile): Added help for 'make generate-gml' (Geomatys-main)
>Wed, 15 May 2024 15:21:12 +0200

>Author: Emile-Muller (emile.muller.contact@gmail.com)

>Commiter: Emile-Muller (emile.muller.contact@gmail.com)




### fix(gml-generator): Added make command to generate GML, fixed Python 3.10 error, updated README
>Wed, 15 May 2024 15:00:08 +0200

>Author: Emile-Muller (emile.muller.contact@gmail.com)

>Commiter: Emile-Muller (emile.muller.contact@gmail.com)




### fix(formula): Fixed formula.html URL
>Wed, 15 May 2024 11:44:57 +0200

>Author: Emile-Muller (emile.muller.contact@gmail.com)

>Commiter: Emile-Muller (emile.muller.contact@gmail.com)




### design(formula): Link in formula.html now shows properly.
>Wed, 15 May 2024 11:30:50 +0200

>Author: Emile-Muller (emile.muller.contact@gmail.com)

>Commiter: Emile-Muller (emile.muller.contact@gmail.com)




### chore(copyright): Updated copyright date and copyright test for 'formula.html'
>Wed, 15 May 2024 10:38:23 +0200

>Author: Emile-Muller (emile.muller.contact@gmail.com)

>Commiter: Emile-Muller (emile.muller.contact@gmail.com)




### feat(GML): Added GMLDataFiller to fill necessary data for GML validation. Added logging in the script.