@@ -110,7 +110,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 mb100 wow">
-                        <p>The formulas used for <code>OperationMethod</code> in the GMLs are based on <a
+                        <p>The formulas used for <code>OperationMethod</code> in the GMLs/WKTs are based on <a
                                 href="https://epsg.org/guidance-notes.html" id="formula-epsg-documentation">EPSG documentation</a>.</p>
                         <p>Specifically "IOGP Publication 373-7-2 – Geomatics Guidance Note number 7, part 2: Coordinate
                             Conversions and Transformations including Formulas."</p>
