@@ -160,7 +160,7 @@
       <div id="search-wrapper">
         <button type="button" class="close">×</button>
         <div class="vertical-center text-center">
-          <form action="#">
+          <form action="#" id="search-form">
             <input
               type="text"
               name="search_terms"
