@@ -103,12 +103,15 @@
           </div>
         </div>
       </section>
-
       <section id="welcome">
         <div class="section-inner nopaddingbottom">
           <div class="container">
             <div class="row">
               <div id="app" class="table-responsive">
+                <p>The formulas used for the operation methods in the WKTs are based on EPSG documentation.</p>
+                <p>Specifically, they are from the publication <i><b>IOGP Publication 373-7-2 – Geomatics Guidance Note number 7, part 2: Coordinate Conversions and Transformations including Formulas</b></i>.
+                <p>For more information and to access the latest version of the "Guidance Note 7-2". Please visit this <a href="/web/formula.html">web page</a>.</p>
+                <br/><br/>
                 <table class="table">
                   <caption>
                     {{title}}
