@@ -1,4 +1,14 @@
-### Implements #6 (HEAD -> proposal001)
+### Add "Enter" event to seach on a body Add information about formulas (HEAD -> improvements)
+>Thu, 30 May 2024 14:18:21 +0200
+
+>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
+
+>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
+
+
+
+
+### Implements #6 (origin/proposal001, proposal001)
 >Thu, 30 May 2024 09:53:06 +0200
 
 >Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
